== Changelog ==
= 5.5.1 =
= 5.5 =
* WooCommerce block dependency updates
* Logging enhancements
* Better compatibility when external object cache is detected
* Refactor Connected Sites API connection
* Adds support for Product visibility logic for syncing
= 5.4 =
* Performance and User Interface improvements
* Ability to sync Product Short Description
= 5.3 =
* WooCommerce Product Category Sync
* Updated compatibility with WPML 4.7
* Improved database query performance to reduce processing time and optimize overall plugin efficiency
* Fix issue where logs were being saved despite setting preferences to disable logging
* Fix for trash and permanently deleted coupons
* Removed duplicate queries
* Updated various dependencies including cookie, express, and @wordpress/e2e-test-utils
* Bumped `serialize-javascript` from 6.0.1 to 6.0.2 in `/blocks`
* Bumped cookie, express, and @wordpress/e2e-test-utils-playwright**: Bumped cookie from 0.4.2 to 0.7.1, express, and @wordpress/e2e-test-utils-playwright
= 5.2 =
* Fix cached value for double opt in ( optimization )
* Fix for subscription statuses changing on updates 
* Removes WooCommerce plugin check #1226
* Fix for trashed and permanently deleted products appearing in Mailchimp 
= 5.1 =
* New Features
* Feature: Backend Optimizations/enhancements to aid in support.*
= 5.0 =
* New Features
* Feature: Introduced a user-agent header "Mailchimp Support" to identify the plugin for support. Servers blocking external post traffic should add this to their safe user-agents.*
* Fixed
* Bug: Resolved issue where product images appeared blurry after plugin updates and improved product image handling.
* Bug: Fixed PHP warning triggered when executing wpml_switch_language_action due to missing language information. Language code validation is now performed before function execution.
* Bug: Addressed syncing issues with customers and promo codes, specifically the inability to sync more than 500 orders.